--- a/front-end/mall4m/pages/index/index.wxml
+++ b/front-end/mall4m/pages/index/index.wxml
@@ -1,14 +1,33 @@
 <!--index.wxml-->
 <view class="container">
-  <view class='bg-sear'>
-    <view class="scrolltop">
-      <view class='section' bindtap='toSearchPage'>
-        <image src='../../images/icon/search.png' class='search-img'></image>
-        <text class='placeholder'>搜索</text>
+  <!-- <page-meta>
+    <navigation-bar title="小岛袋鼠优选" front-color="#fff" background-color="#eba851" color-animation-duration="0" color-animation-timing-func="">
+    </navigation-bar>
+    <view class='bg-sear' style="background-color: rgb(235, 168, 81); position: fixed; top:0">
+            <view class="scrolltop">
+            <view class='section' bindtap='toSearchPage'>
+                <image src='../../images/icon/search.png' class='search-img'></image>
+                <text class='placeholder'>搜索</text>
+            </view>
+        </view>
+    
+  </view>
+  </page-meta> -->
+  <view style="background-color: rgb(235, 168, 81);position: fixed; top:0;; height:141px; width:100vw;z-index: 999;">
+      <view style="height:100rpx; line-height: 80rpx; padding-top:{{statuBarHeight}}px; color:#fff; font-weight: bold; width:100vw; text-align: center;">
+          小岛袋鼠优选
       </view>
+      <view class='bg-sear' style="top: 100px; background: transparent;">
+        <view class="scrolltop">
+        <view class='section' bindtap='toSearchPage'>
+            <image src='../../images/icon/search.png' class='search-img'></image>
+            <text class='placeholder'>搜索</text>
+        </view>
+        </view>
     </view>
   </view>
-  <view class='content'>
+  
+  <view class='content' style="margin-top: 141px;">
     <!-- swiper -->
     <swiper autoplay="{{autoplay}}" indicator-color="{{indicatorColor}}" interval="{{interval}}" duration="{{duration}}" indicator-active-color="{{indicatorActiveColor}} " circular='true' class='pic-swiper' indicator-dots previous-margin='20rpx' next-margin='20rpx'>
       <block wx:for='{{indexImgs}}' wx:key='imgUrl'>
@@ -57,13 +76,12 @@
   </view>
 
   <block wx:for="{{taglist}}" wx:key="id">
-    <!-- 每日上新 -->
-    <view class='up-to-date' wx:if="{{item.style==2}}">
+    <!-- 每日上新 && 小岛优选-->
+    <view class='up-to-date' wx:if="{{item.style==2 && item.id!=4}}">
       <view class='title'>
         <text>{{item.title}}</text>
         <view class='more-prod-cont' bindtap='toClassifyPage' data-sts="0" data-id="{{item.id}}" data-title="{{item.title}}">
           <text class='more'>查看更多</text>
-          <!-- <text class='arrow'></text> -->
         </view>
       </view>
       <view class='item-cont'>
@@ -82,7 +100,6 @@
             </view>
           </view>
         </block>
-
       </view>
     </view>
 
@@ -96,10 +113,12 @@
         </view>
       </view>
       <view class='hotsale-item-cont'>
-        <block wx:for="{{item.prods}}" wx:for-item="prod" wx:key="prodId">
+        <!-- item.prods  wx:for-item="prod" wx:key="prodId"-->
+        <block wx:for="{{6}}"  wx:for-item="prod" wx:key="prodId">
           <view class='prod-items' bindtap='toProdPage' data-prodid="{{prod.prodId}}">
             <view class='hot-imagecont'>
-              <image src='{{prod.pic}}' class='hotsaleimg'></image>
+            <!-- prod.pic -->
+              <image src='http://cdn.bhgk.cc/2024/01/a39af908797d4f26a0d8d03e73ae9aa8.jpeg' class='hotsaleimg'></image>
             </view>
             <view class='hot-text'>
               <view class='hotprod-text'>{{prod.prodName}}</view>
@@ -114,7 +133,7 @@
                   <text>￥</text>
                   <text>{{prod.oriPrice}}</text>
                 </view> -->
-                <image src='../../images/tabbar/basket-sel.png' class='basket-img'></image>
+                <image src='../../images/icon/basket.png' class='basket-img'></image>
               </view>
             </view>
           </view>
@@ -123,7 +142,7 @@
     </view>
 
     <!-- 更多宝贝 -->
-    <view class='more-prod' wx:if="{{item.style==0}}">
+    <!-- <view class='more-prod' wx:if="{{item.style==0}}">
       <view class='title'>{{item.title}}</view>
       <view class='prod-show'>
         <block wx:for="{{item.prods}}" wx:for-item="prod" wx:key="prodId">
@@ -140,14 +159,13 @@
                   <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
                   <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
                 </view>
-                <!-- <view class='go-to-buy'>立即购买</view> -->
                 <image src='../../images/tabbar/basket-sel.png' class='basket-img' data-prodid="{{prod.prodId}}" catchtap="addToCart"></image>
               </view>
             </view>
           </view>
         </block>
       </view>
-    </view>
+    </view> -->
   </block>
 </view>
 <wxs module="wxs" src="../../wxs/number.wxs" />
