小程序首页轮播图跳转到指定页面

--- a/front-end/mall4m/pages/index/index.wxml
+++ b/front-end/mall4m/pages/index/index.wxml
@@ -18,12 +18,11 @@
     <!-- swiper -->
     <swiper autoplay="{{autoplay}}" indicator-color="{{indicatorColor}}" interval="{{interval}}" duration="{{duration}}" indicator-active-color="{{indicatorActiveColor}} " circular='true' class='pic-swiper' indicator-dots previous-margin='20rpx' next-margin='20rpx'>
       <block wx:for='{{indexImgs}}' wx:key='imgUrl'>
-        <swiper-item class="banner-item">
-          <view class='img-box'>
-            <image src='{{item.imgUrl}}' data-prodid='{{item.relation}}' 
+        <swiper-item class="banner-item" >
+          <view class='img-box' bindtap='toSwiperLinkPage' data-prodid='{{item.relation}}' 
             data-type='{{item.type}}' 
-            data-item='{{item}}' 
-            bindtap='toSwiperLinkPage' class='banner'></image>
+            data-item='{{item}}' >
+            <image src='{{item.imgUrl}}' class='banner'></image>
           </view>
         </swiper-item>
       </block>
