--- a/front-end/mall4m/pages/index/index.wxss
+++ b/front-end/mall4m/pages/index/index.wxss
@@ -197,7 +197,7 @@ right:30rpx;
 top:48rpx;
 color:#fff;
 font-size:24rpx;
-background:#65addf;
+background:#f7840e;
 border-radius:30rpx;
 padding:0 30rpx;
 height:44rpx;
